--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ python:
 - '3.2'
 - '3.3'
 - '3.4'
+- '3.5'
+- 'pypy'
+- 'pypy3'
 install:
 - pip install weakrefset lxml
 - pip install unittest2  testtools
